# quants-generate

./: .gitignore  LICENSE  README.md  requirements.txt  setup.py
.devcontainer/: devcontainer.json
quants/: pyproject.toml
quants/generate/: __main__.py  animate_stmc.py  generate_motion_stmc.py  render_priormdm.py  transcode_animations.py
quants/generate/prompts/: __init__.py  run.py
quants/generate/prompts/answer_templates/: binary_yes.txt
quants/generate/prompts/base/: data_instance.py  list_of_actions.txt  sample.py
quants/generate/prompts/prompt_templates/: first.txt
quants/generate/prompts/qna_type/: __init__.py  question.py
quants/generate/prompts/qna_type/comparison/comparison_action/: comparison_action.py  comparison_action_binary.txt  comparison_action_first_last_same_binary.txt  comparison_action_timestamp_different_binary.txt
quants/generate/prompts/qna_type/comparison/comparison_counting/: comparison_counting.py  comparison_counting_binary.txt
quants/generate/prompts/qna_type/descriptive/descriptive_identification/: descriptive_identification.py  descriptive_identification_multi.txt
quants/generate/prompts/qna_type/temporal/temporal_after/: temporal_after_binary.txt  temporal_after_directly_open.txt
quants/generate/prompts/qna_type/temporal/temporal_before/: temporal_before.py  temporal_before_binary.txt  temporal_before_directly_multi.txt  temporal_before_directly_open.txt
quants/notebooks/: Read Forms.ipynb  create-human-study-forms.ipynb  dataset-statistics.ipynb  export-for-human-evaluation.ipynb  make-hf-dataset.ipynb  read-human-study-forms.ipynb  visualize-joint-labels.ipynb
time_qa-dataset/: .gitignore  pyproject.toml
time_qa-dataset/generate/: __main__.py  animate_stmc.py  generate_motion_stmc.py  transcode_animations.py
time_qa-dataset/generate/prompts/: run.py
time_qa-dataset/generate/prompts/answer_templates/: binary_no.txt  multi_choice.txt  open.txt
time_qa-dataset/generate/prompts/base/: list_of_actions_extended.txt  list_of_actions_upper_body.txt  utility.py
time_qa-dataset/generate/prompts/prompt_templates/: generic.txt  last.txt
time_qa-dataset/generate/render/: __init__.py
time_qa-dataset/notebooks/: Create Forms.ipynb  Read Forms.ipynb  Statistics.ipynb  example_data.hdf5  export-to-hive-ai.ipynb  generate-debugging.ipynb  interpret-human-evaluation.ipynb  make-hf-dataset.ipynb  render.ipynb  visualize-joint-labels.ipynb
time_qa-dataset/scripts/: interactive.py  json_to_amazon_csv_binary.py  json_to_amazon_csv_multi.py  json_to_amazon_csv_open.py  json_to_model_csv.py
(+57 files in other folders)
