[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "generate-quants"
version = "1.0.0"
authors = [
  { name = "Various" },
]
description = "Generation code for the QuAnTS dataset."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
]
urls = { Homepage = "https://github.com/felixdivo/time_qa-dataset" }
dependencies = [
    "rich",
    "numpy",
    "matplotlib",
    "seaborn",
    "typer",
    "datasets",
    "h5py",
    "rtpt",
    "lightning",
]

# The package is discovered automatically (including the py.typed file):
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#flat-layout
[tool.setuptools.packages.find]
exclude = ["notebooks"]

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "tables",
  "ipykernel",
  "plotly",
  "nbformat",
  "huggingface_hub[cli]",
]

[tool.ruff]
line-length = 110
# The lowest supported version
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
